Fix double scrolling and make adjustments for news

--- a/src/latest-landing/home/News/Blog/Blog.scss
+++ b/src/latest-landing/home/News/Blog/Blog.scss
@@ -9,6 +9,7 @@
     @media (min-width: 992px) {
         height: 100vh;
         width: 100vw;
+        overflow-y: hidden;
     }
 
     &__heading {
