--- a/src/latest-landing/home/News/NewsArticle/NewsArticle.scss
+++ b/src/latest-landing/home/News/NewsArticle/NewsArticle.scss
@@ -69,6 +69,10 @@
             margin: 0;
             padding: 0;
 
+            &--2-last {
+                width: 50%;
+            }
+
             &--last {
                 width: 50%;
             }
