--- a/src/latest-landing/layout/Default/Default.scss
+++ b/src/latest-landing/layout/Default/Default.scss
@@ -1,10 +1,10 @@
 .Default {
-    overflow-y: scroll;
-    scroll-behavior: smooth;
+    // overflow-y: scroll;
+    // scroll-behavior: smooth;
 
     @media (min-width: 992px) {
-        overflow-x: hidden;
-        height: 100vh;
+        // overflow-x: hidden;
+        // height: 100vh;
     }
 }
 
